--- a/todo/src/app/components/task/task.component.html
+++ b/todo/src/app/components/task/task.component.html
@@ -1,1 +1,1 @@
-<li>Task: {{ name }} => {{ getComplete() }}</li>
+<li [class]="getItemVariant()">Task: {{ name }} => <span [class]="getBadgeVariant()">{{ getComplete() }}</span></li>
