--- a/todo/src/app/components/task/task.component.html
+++ b/todo/src/app/components/task/task.component.html
@@ -1,3 +1,4 @@
+<input type="text" [(ngModel)]="name">
 <li [class]="getItemVariant()">
   <button mat-raised-button (click)="toggleComplete()">{{ getButtonText() }}</button>
   <p>
