--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <app-task></app-task>
-  <app-task></app-task>
-  <app-task></app-task>
+  <app-task [name]="name1" [complete]="complete1"></app-task>
+  <app-task [name]="name2" [complete]="complete2"></app-task>
+  <app-task [name]="name3" [complete]="complete3"></app-task>
 </ul>
