--- a/todo/src/app/components/task/task.component.html
+++ b/todo/src/app/components/task/task.component.html
@@ -1,8 +1,8 @@
-<input type="text" [(ngModel)]="name">
+<input type="text" [(ngModel)]="task.title">
 <li [class]="getItemVariant()">
   <button mat-raised-button (click)="toggleComplete()">{{ getButtonText() }}</button>
   <p>
-    Task: {{ name }} =>
+    Task: {{ task.title }} =>
     <span [class]="getBadgeVariant()">{{ getComplete() }}</span>
   </p>
 </li>
