--- a/todo/src/app/components/nav/nav.component.html
+++ b/todo/src/app/components/nav/nav.component.html
@@ -1,1 +1,9 @@
 <app-logout></app-logout>
+<ul>
+  <li routerLinkActive="active" >
+    <a routerLink="login">Authentification</a>
+  </li>
+  <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+    <a routerLink="todolist">Liste de taches</a>
+  </li>
+</ul>
