--- a/todo/src/app/components/task/task.component.html
+++ b/todo/src/app/components/task/task.component.html
@@ -1,11 +1,8 @@
-<input type="text" [(ngModel)]="task.title">
+<!-- <input type="text" [(ngModel)]="task.title"> -->
 <li [class]="getItemVariant()">
   <button mat-raised-button (click)="toggleComplete()">{{ getButtonText() }}</button>
   <p>
-    Id: {{ task.id }}<br />
     Task: {{ task.title }} =>
-    <span [class]="getBadgeVariant()">{{ getComplete() }}</span><br />
-    Description: {{ task.description }}<br />
-    Date de creation: {{ task.created | date:'dd/MM/y hh:mm' }}
+    <span [class]="getBadgeVariant()">{{ getComplete() }}</span>
   </p>
 </li>
