--- a/todo/src/app/components/todolist/todolist.component.html
+++ b/todo/src/app/components/todolist/todolist.component.html
@@ -9,7 +9,7 @@
   <h2 *ngSwitchDefault>Allez du nerf !!</h2>
 </div>
 
-<ul *ngIf="todo.tasks.length; else noTaskBlock">
-  <app-task *ngFor="let task of todo.tasks; trackBy:trackByFunction" [task]="task"></app-task>
+<ul *ngIf="tasks.length; else noTaskBlock">
+  <app-task *ngFor="let task of tasks; trackBy:trackByFunction" [task]="task"></app-task>
 </ul>
 <ng-template #noTaskBlock>Il n'y a aucune tache pour le moment.</ng-template>
