--- a/todo/src/app/components/nav/nav.component.html
+++ b/todo/src/app/components/nav/nav.component.html
@@ -6,4 +6,7 @@
   <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
     <a routerLink="todolist">Liste de taches</a>
   </li>
+  <li routerLinkActive="active">
+    <a routerLink="task-form">Ajouter une tache</a>
+  </li>
 </ul>
